k8s/05-policies-jobs.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-api-metrics
  namespace: graphql-api
  labels:
    app: graphql-api
    component: metrics
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9464'
    prometheus.io/path: '/metrics'
spec:
  selector:
    app: graphql-api
  ports:
    - port: 9464
      targetPort: 9464
      protocol: TCP
      name: metrics
  type: ClusterIP
